platform-incubator/deployment/spec/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-name
  namespace: service-namespace
  labels:
    app: service-name
spec:
  selector:
    matchLabels:
      app: service
  template:
    metadata:
      labels:
        app: service
    spec:
      containers:
        - name: service
          image: service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              protocol: TCP
...
