platform-incubator/deployment/spec/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: service-namespace
spec:
  selector:
    app: service
  ports:
    - port: 9000
...
